--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>influencer-gear-Tusk</title>
-    <link rel="stylesheet" href="style/influencer.css">
+    <link rel="stylesheet" href="style/influencer.css ">
 </head>
 <body>
-    
+    <header>
+<div class="nav container">
+    <nav>
+        <h3>Influencer products</h3>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Product</a></li>
+            <li><a href="">Sign up</a></li>
+            <li><a href="">Log in</a></li>
+            <li><img class="nav-img" src="./influencer-images/search.svg" alt=""></li>
+            <li><img class="nav-img" src="./influencer-images/shopping-cart.svg" alt=""></li>
+        </ul>
+    </nav>
+
+</div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
