head section completed

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
     </nav>
 
 </div>
+<div class="head">
+<div class="head-left">
+    <h2 class="head-title">Start your Journey as 
+        Influencer</h2>
+    <p class="head-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+    <button>Preebook now<img src="./influencer-images/arrow-forward 1.svg" alt=""></button>
+</div>
+<div class="head-right">
+    <img class="head-img1" src="./influencer-images/main-camera.png" alt="">
+    <img class="head-img2" src="./influencer-images/Circle design.svg" alt="">
+</div>
+</div>
     </header>
     <main>
 
