company logo ok

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
 </div>
     </header>
     <main>
-
+        <!-- company logo style section -->
+<section class="company-logo">
+<div class="logo"><img src="./influencer-logos/Alibaba.svg" alt=""></div>
+<div class="logo"><img src="./influencer-logos/Amazon.svg" alt=""></div>
+<div class="logo"><img src="./influencer-logos/Daraz.pk Logo.svg" alt=""></div>
+<div class="logo"><img src="./influencer-logos/Ebay.svg" alt=""></div>
+<div class="logo"><img src="./influencer-logos/Rakuten.svg" alt=""></div>
+<div class="logo"><img src="./influencer-logos/Target.svg" alt=""></div>
+<div class="logo"><img src="./influencer-logos/Walmart.svg" alt=""></div>
+</section>
     </main>
     <footer>
 
