main section ok

--- a/index.html
+++ b/index.html
@@ -46,6 +46,76 @@
 <div class="logo"><img src="./influencer-logos/Target.svg" alt=""></div>
 <div class="logo"><img src="./influencer-logos/Walmart.svg" alt=""></div>
 </section>
+                <!-- Popular Collection style section -->
+ <section class="popular-head">
+    <h3 class="Popular-Collection-title">Popular Collection</h3>
+    <div class="popular-container">
+        <div class="gallary">
+            <img src="./influencer-images/tripod.png" alt="">
+            <h3>Flex Tripod</h3>
+            <p class="p1">$50.48</p>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="gallary">
+            <img src="./influencer-images/mic.png" alt="">
+            <h3>microphone</h3>
+            <p class="p1">$120.25</p>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="gallary">
+            <img src="./influencer-images/mic.png" alt="">
+            <h3>Airbuds</h3>
+            <p class="p1">$100.00</p>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="gallary">
+            <img src="./influencer-images/airpod.png" alt="">
+            <h3>Drone</h3>
+            <p class="p1">$980.25</p>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="gallary">
+            <img src="./influencer-images/drone.png" alt="">
+            <h3>Light Setup</h3>
+            <p class="p1">$1200.00</p>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="gallary">
+            <img src="./influencer-images/lights.png" alt="">
+            <h3>Photoshoot set</h3>
+            <p class="p1">$820.40</p>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="gallary">
+            <img src="./influencer-images/setup.png" alt="">
+            <h3>Vlogging Camera</h3>
+            <p class="p1">$1800.80</p>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="gallary">
+            <img src="./influencer-images/single-light.png" alt="">
+            <h3>Green Screen</h3>
+            <p class="p1">$25.48</p>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="gallary">
+            <img src="./influencer-images/action.png" alt="">
+            <h3>Action Camera</h3>
+            <p class="p1">$380.00</p>
+            <p>Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </div>
+    <p class="see-more">See More</p>
+ </section>
     </main>
     <footer>
 
