compleated my work

--- a/index.html
+++ b/index.html
@@ -118,7 +118,18 @@
  </section>
     </main>
     <footer>
-
+<div class="footer-title">
+    <h3>Influencer products</h3>
+    <p>Copyright © 2020  influencer products</p>
+    <p class="pp2">All rights reserved</p>
+</div>
+<div class="footer-logo11">
+    <img class="img-logo" src="./influencer-logos/instagram.webp" alt="" >
+    <img class="img-logo" src="./influencer-logos/instagram.webp" alt="" >
+    <img class="img-logo" src="./influencer-logos/instagram.webp" alt="" >
+    <img class="img-logo" src="./influencer-logos/instagram.webp" alt="" >
+  
+</div>
     </footer>
 </body>
 </html>
